--- a/index.html
+++ b/index.html
@@ -6,5 +6,13 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <ul>
+        <li><a href="./recipes/pbj.html">PB&J</a></li>
+        <li><a href="./recipes/quesadilla.html">Quesadilla</a></li>
+        <li> <a href="./recipes/baked_feta.html">Baked Feta</a></li>
+    </ul>
+    
+    
+   
 </body>
 </html>
