--- a/recipes/baked_feta.html
+++ b/recipes/baked_feta.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Baked Feta</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
     <h1>Baked Feta</h1>
